Prevent re-renders of children when using loading mask.
This prevents children being rerendered and losing state. Loading styles are applied instead using a classname, but leaving the divs in place.

--- a/assets/js/base/components/loading-mask/style.scss
+++ b/assets/js/base/components/loading-mask/style.scss
@@ -1,4 +1,4 @@
-.wc-block-components-loading-mask {
+.wc-block-components-loading-mask.is-loading {
 	position: relative;
 	min-height: 18px + $gap;
 	pointer-events: none;
@@ -10,8 +10,8 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
-}
 
-.wc-block-components-loading-mask__children {
-	opacity: 0.25;
+	.wc-block-components-loading-mask__children {
+		opacity: 0.25;
+	}
 }
