Avoid extra is-loading classname

--- a/assets/js/base/components/loading-mask/style.scss
+++ b/assets/js/base/components/loading-mask/style.scss
@@ -1,4 +1,4 @@
-.wc-block-components-loading-mask.is-loading {
+.wc-block-components-loading-mask {
 	position: relative;
 	min-height: 18px + $gap;
 	pointer-events: none;
